[package]
name = "bab"
version = "0.0.0"
edition = "2021"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
crossbeam-utils = "0.8"
spin = "0.9"

[dev-dependencies]
async-executor = "1.12"
async-unsync = "0.3"
core_affinity = "0.8"
criterion = "0.3"
pollster = "0.3"

[[bench]]
name = "benches"
harness = false