[package]
name = "bab"
version = "0.0.0"
edition = "2021"
description = "build a bus - low-level components for your next message bus"
repository = "https://github.com/tedsta/bab"
documentation = "https://docs.rs/bab"
keywords = ["bus", "packet", "buffer", "pool", "thread-local"]
categories = ["concurrency", "data-structures"]
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
crossbeam-utils = "0.8"
spin = "0.9"

[dev-dependencies]
async-executor = "1.12"
async-unsync = "0.3"
core_affinity = "0.8"
criterion = "0.3"
pollster = "0.3"

[[bench]]
name = "benches"
harness = false
